k8s/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: groupchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: css
              mountPath: /usr/share/nginx/html/css
            - name: js
              mountPath: /usr/share/nginx/html/js
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
        - name: html
          configMap:
            name: frontend-index
        - name: css
          configMap:
            name: frontend-css
        - name: js
          configMap:
            name: frontend-js
