k8s/app/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: groupchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: sofia1023/file-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  namespace: groupchat
spec:
  type: NodePort
  selector:
    app: file-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      nodePort: 30083
