k8s/app/messaging-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
  namespace: groupchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
        - name: messaging-service
          image: iacostap23/messaging-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: groupchat
spec:
  type: NodePort
  selector:
    app: messaging-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      nodePort: 30082
