k8s/app/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: groupchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: sofia1023/user-service:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: groupchat
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      nodePort: 30081
    - name: grpc
      port: 9091
      targetPort: 9091
